[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["davesabra <davesabra@yahoo.com>"]
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/davesabra/hello-wasm"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.43"


